# typistprison

./: README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
typistprison/: .gitignore  CMakeLists.txt  basetextedittab.cpp  basetextedittab.h  customfilesystemmodel.cpp  customfilesystemmodel.h  customtabbar.cpp  customtabbar.h  customtabbarwidget.cpp  customtabbarwidget.h  customtabwidget.cpp  customtabwidget.h  customtreestyle.cpp  customtreestyle.h  fictionhighlighter.cpp  fictionhighlighter.h  fictiontextedit.cpp  fictiontextedit.h  fictionviewtab.cpp  fictionviewtab.h  foldertreeviewwidget.cpp  foldertreeviewwidget.h  fontmanager.cpp  fontmanager.h  functionbar.cpp  functionbar.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownhighlighter.cpp  markdownhighlighter.h  markdownviewtab.cpp  markdownviewtab.h  plaintextedit.cpp  plaintextedit.h  plaintextviewtab.cpp  plaintextviewtab.h  prisonerfictiontextedit.cpp  (+15 more)
typistprison/functionbar/: customtabbar.cpp  customtabbar.h  menubutton.cpp  menubutton.h  paintcornerwidget.h  paintleftedgewidget.h  trafficlightwidget.cpp  trafficlightwidget.h
typistprison/popups/: hovericonbutton.cpp  hovericonbutton.h  imageframe.h  imagepopup.cpp  imagepopup.h  prisonerdialog.h  savemessagebox.cpp  wikiframe.cpp
typistprison/utils/: ahocorasick.cpp  ahocorasick.h  contextmenuutil.h  hoverbutton.h
typistprison0/: customstyle.h  customtabwidget.cpp  fictiontextedit.cpp  fictiontextedit.h  fictionviewtab.cpp  main.cpp  mainwindow.cpp  typistprison.pro
typistprison1/: CMakeLists.txt  customtabwidget.cpp  fictiontextedit.cpp  fictiontextedit.h  fictionviewtab.cpp  fictionviewtab.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownhighlighter.cpp  markdowntextedit.cpp  markdowntextedit.h  markdownviewtab.cpp  plaintextedit.cpp  plaintextedit.h  plaintextviewtab.h  qmarkdowntextedit.cpp  qmarkdowntextedit.h  searchHighlighter.cpp  searchHighlighter.h  searchWidget.cpp  textedithelper.cpp
